--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = gnu-efi
-url = https://sourceforge.net/projects/gnu-efi/files/gnu-efi-3.0.8.tar.bz2
+url = https://sourceforge.net/projects/gnu-efi/files/gnu-efi-3.0.9.tar.bz2
 archives = 
 giturl = 
 
@@ -21,6 +21,8 @@ broken_parallel_build = true
 compat = false
 # set conservative build flags
 conservative_flags = false
+# dev package requires the extras to be installed
+dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
 # optimize build for speed over size
