--- a/options.conf
+++ b/options.conf
@@ -3,6 +3,8 @@ name = gnu-efi
 url = https://sourceforge.net/projects/gnu-efi/files/gnu-efi-3.0.9.tar.bz2
 archives = 
 giturl = 
+domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -17,7 +19,7 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = true
-# this package is a library compatability package and only ships versioned library files
+# this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
 conservative_flags = false
@@ -37,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
